--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif&display=swap" rel="stylesheet">
+
   </head>
 
   <body>
     <div class="col-xs-12 text-center btn btn-default heading">
-      <h1 class="heading">SOUND IDENTIFICATION OF ANIMALS</h1>
+      <h1>SOUND IDENTIFICATION OF ANIMALS</h1>
       <h3>Note: play different sounds like bark , meow , roar and moo to identify it</h3>
     </div>
       <center>
